--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-three/drei": "^10.6.1",
     "@react-three/fiber": "^9.3.0",
     "chart.js": "^4.5.0",
+    "firebase": "^12.0.0",
     "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
     "maath": "^0.10.8",
